gui/src/public/css/dashboardEditor.scss
.dashboard-editor-form .form-group {
  margin-left: 5px;
  min-width: 140px;
}

.dashboard-back-btn {
  position: absolute;
  right: 98px;
}


.dashboard .flippy-back {
  height: 120vh !important;
  min-height: 70vh;
}

.dashboard .flippy-front {
  height: auto;
  min-height: 70vh;
  padding: 0px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0);
}

.dashboard-filter-btn {
  position: absolute;
  right: 2px;
}

.dashboard-save-btn {
  position: absolute;
  right: 50px;
}

.dashboard .btn-primary {
  color: #fff;
  background-color: #265160;
  border-color: #265160;
}

.dashboard .btn-primary:hover {
  background-image: none !important;
  background-color: #265160c4 !important;
}


.dashboard .deactivateDash .react-switch-bg {
  background: rgb(39, 83, 98) !important;
}

.dashboard .react-switch-handle {
  background: #fff !important;

}

//dashboard editor filter
.create-filter-form {
  padding: 10px;
  float: left;
  background: #a9c4c4;
  width: 99%;
}

.create-filter-form .btn {
  bottom: 0px;
  right: 0px;
  position: absolute;
}

.hide-dash-editor {
  display: none;
}

.dates-container {
  display: flex;
}

.react-datepicker-wrapper {
  padding-right: 10px !important;
}

.dashboard-filter-field {
  min-width: 15px;
  margin-right: 0px;
  margin-bottom: 5px;
}

.dashboard-filter-field .form-checkbox {
  width: 20px;
  height: 20px;
}


.dates-container input,
.create-filter-form input {
  display: block;
  height: calc(1.5em + .75rem + 2px);
  padding: .375rem .75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid #ced4da;
  border-radius: .25rem;
  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
  width: 12vw;
}

.create-filter-form input {
  // width: 20vw;
}

.dates-container input {
  width: 140px;

}

#filtertype {
  max-width: 23vw;
}

.disappear {
  display: none;
}

#filtereditor-form-container,
#filter-form-container {
  background: #a9c4c4;
  border-radius: 10px;
  margin-top: 60px;
}

#filtereditor-form-container button.close,
#filter-form-container button.close {
  padding-right: 1em;
}

#filtereditor-form-container label,
#filter-form-container label {
  color: #275362;
}

.apply-filter-btn {
  position: initial !important;
  border-radius: 12px;
  margin-left: 0px;
}

.custom-react-select-container {
  height: auto;
  padding: 8px 12px;
  display: flex;
  box-shadow: 0px 0px 5px 0px grey;
}

.custom-react-select-container:hover {
  background-color: #DEEBFF !important;
  width: 100%;

}

.custom-react-select-container i {
  // float: right;
  // right: 0px;
  margin-left: auto;
}

.dash-manager-bar {
  // border: 0.5px solid#3d6776;
  // padding: 1em;
  padding-top: 12px;
  padding-bottom: 0px;
  position: absolute;
  width: auto;
  float: right;
  right: 0;
  // background-image: linear-gradient(to right top, #3d6776, #4b6f7c, #587682, #657e88, #72868e);
  // min-height: 65px;
}

.dashboard-viewer-div {
  position: absolute;
  margin-top: 4em;
  width: 100%;
}



.react-select-container {
  z-index: 100;
  width: 300px;
  float: left;
  right: 10px;

}

.dash-manager-buttons .btn {
  margin-right: 7px;
  border-color: #eaeaea;
}

.dash-manager-buttons {
  right: 0px;
  width: auto;
  float: right;
  position: relative;
}

.dash-manager-buttons .btn-primary {
  color: #345561;
  background-color: #c5d2d6;
  border-radius: 42px;
  font-size: 14px;
  box-shadow: 0px 0px 5px 0px grey;
}

.dash-manager-buttons .btn-primary:hover {
  color: whitesmoke;
  background-color: #c5d2d6;
}

.dasboard-viewer-content {
  // border: 1px solid#1d6165;
  min-height: 20px;
  border-radius: 4px;
  box-shadow: 2px 5px#c6b5b5;
  padding: 1em;
  border: 0.5px solid grey;
  width: max-content;
  min-width: 99%;
}

.dashboard-rollup-button {
  color: black;
  cursor: pointer;
  right: 1%;
  position: absolute;
} 

.dashboard-filter-description {
  position: absolute;
  left: 0;
  top: 0;
  height: 30px;
  width: 100%;
  font-size: 16px !important;
}

.dashboard-preview-tab {
  background-image: linear-gradient(to right, #275362, #235764, #205b65, #1d5f65, #1d6365);
  height: 1.3em;
  color: #f2f2f2;
  top: 50%;
  width: 15em;
  text-align: center;
}

.dashboard-preview-tab span {
  position: relative;
  top: 0.1em;
}

.create-dash-btn {
  margin-left: 1em;
  margin-bottom: 10px;
}

.Window_Analytics .dashboard .GridCustomStyle {
  height: calc(100% - 91px) !important
}

.Window_Analytics .dashboard label {
  color: #265160 !important;
}

.dashboard-container {
  margin-top: 4em;
}

.k-grid-header .k-i-sort-asc-sm,
.k-grid-header .k-i-sort-desc-sm,
.k-grid-header .k-sort-order {
  color: #656565 !important
}

.k-grid-header .k-grid-filter.k-state-active,
.k-grid-header .k-header-column-menu.k-state-active,
.k-grid-header .k-hierarchy-cell .k-icon.k-state-active {
  color: #fff;
  background-color: #656565 !important
}

.k-pager-numbers .k-link.k-state-selected {
  color: #656565 !important;
  background-color: rgba(78, 73, 73, 0.2) !important
}

.k-pager-numbers .k-link {
  color: #656565 !important;
}

.k-pager-numbers .k-link:hover,
.k-pager-numbers .k-link.k-state-hover {
  color: #656565 !important;
  background-color: rgba(78, 73, 73, 0.2) !important
}

.drillDownStyle .k-master-row:hover {
  color: blue !important;
  text-decoration: underline;
  cursor: pointer !important;
}

.filter_remove_button {
  cursor: pointer;
  float: left;
  vertical-align: middle;
  margin-top: 25px;
  position: relative;
}

.errorMsg {
  color: red !important;
}

.dashboard-filter-field {
  font-size: 13px;
}

.dashboardTextField {
  font-size: 13px !important;
  height: 38px !important;
}

.field-width-75 {
  width:75px !important;
}

.field-width-100 {
  width:100px !important;
}

.field-width-150 {
  width:150px !important;
}

.field-width-200 {
  width:200px !important;
}
.disabled {
  
}

.select_notif {
  padding: 10px;
  background: yellow;
  color: black;
  margin-top: 25px;
  float: left;
}

.toastHide {
  visibility: hidden;
}
.full-width{
  widows: 100%;
  overflow: hidden;
}

